FIXED: reset selection state when switching to downloads tab since it will be lost (proper fix would be not to lose selection, but I save this for a later release) ADDED: ability to switch to dark mode

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,7 +5,8 @@ body{
     user-select: none;
 }
 
-.bp3-dark {
+body.bp3-dark {
+    background-color: #293742;
     color: #f5f8fa;
 }
 
